@@ -15,6 +15,8 @@ CHANGES IN HTMLDOC v1.8.12
 	  would be > 32 colors or 16 gray shades.
 	- True transparency support for GIF files and PDF 1.3 and
 	  PostScript Level 2 or 3 output!
+	- The GUI now automatically changes the extension of the
+	  output filename as needed.
 
     CHANGES
 
